Fixed ConfigLoader and the build artifacts