@@ -1,7 +1,11 @@
 package server.controller.utilities;
 
 import com.google.gson.stream.JsonReader;
+import org.apache.commons.io.IOUtils;
+
+import java.io.File;
 import java.io.IOException;
+import java.io.InputStream;
 import java.io.StringReader;
 import java.nio.file.Files;
 import java.nio.file.Paths;
@@ -35,7 +39,8 @@ public class ConfigLoader {
         String jsonFile;
         String field;
         try {
-            jsonFile = Files.readString(Paths.get(configurationFilePath));
+            InputStream inputStream = ConfigLoader.class.getResourceAsStream(configurationFilePath);
+            jsonFile = IOUtils.toString(inputStream);
             JsonReader jsonReader = new JsonReader(new StringReader(jsonFile));
             jsonReader.beginObject();
             while(jsonReader.hasNext()) {
